[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Effects/Death/Dead_In_03.png" type="Texture" id=1]
[ext_resource path="res://Assets/Effects/Death/Dead_In_01.png" type="Texture" id=2]
[ext_resource path="res://Assets/Effects/Death/Interrogation_In_01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Effects/Death/Dead_Out_01.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Effects/SummonableDeathEffect.gd" type="Script" id=5]
[ext_resource path="res://Menu/medieval-pixel.ttf" type="DynamicFontData" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="SummonableDeathEffect" type="AnimatedSprite"]
frames = SubResource( 1 )
script = ExtResource( 5 )

[node name="NameLabel" type="Label" parent="."]
margin_left = -12.0
margin_top = -14.0
margin_right = 58.0
margin_bottom = 56.0
rect_scale = Vector2( 0.342544, 0.358301 )
custom_fonts/font = SubResource( 2 )
text = "Teste"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="NameLabel" to="." method="_on_Label_mouse_entered"]
[connection signal="mouse_exited" from="NameLabel" to="." method="_on_NameLabel_mouse_exited"]
